haciendo media queries para moviles

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
@@ -58,9 +58,9 @@
 }
 
 .boton-gral3{
-    position: absolute;
-    bottom: auto;
-    left: 50%;
+    position: relative;
+    bottom: -31px;
+    margin: auto;
 }
 
 .movimiento10{
