--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
@@ -61,8 +61,9 @@ form textarea{
 }
 
 .boton-grales{
-    position: absolute;
-    left: 45%;
+    position: relative;
+    bottom: -31px;
+    margin: auto;
 }
 
 .movimiento2{
