--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-experimento.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-experimento.css
@@ -93,9 +93,9 @@ body{
 }
 
 .boton-gral3{
-    position: absolute;
-    bottom: -30px;
-    left: 45%;
+    position: relative;
+    bottom: -53px;
+    margin: auto;
 }
 
 .movimiento7{
