--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-idea.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-idea.css
@@ -91,9 +91,9 @@
 }
 
 .boton-gral4{
-    position: absolute;
+    position: relative;
     bottom: -30px;
-    left: 45%;
+    margin: auto;
 }
 
 .movimiento9{
