--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -126,6 +126,7 @@
 .finalizado13{
     width: 300px;
     height: 200px;
+    z-index: 4;
     position: absolute;
 }
 
@@ -157,6 +158,29 @@ textarea {
         position: relative;
         bottom: -189px;
         margin: auto;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .finalizado13{
+        width: 200px;
+        height: 100px;
+    }
+
+    .movimiento13{
+        left: 5%;
+        top: 7%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .finalizado13{
+        width: 100px;
+        height: 50px;
+    }
+
+    .movimiento13{
+        top: 5%;
     }
 }
 
