--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
@@ -191,6 +191,15 @@
          margin-top: 20px;
     }
 }
+@media screen and (max-width: 500px){
+    .finalizado3{
+        width: 100px;
+        height: 50px;
+    }
+    .movimiento3{
+        top: 12%;
+    }
+}
 @media  screen and (max-width: 330px) {
     .dialogo-small{
         width: 80%;
