--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-idea.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-idea.css
@@ -105,7 +105,22 @@
 .finalizado9{
     width: 300px;
     height: 200px;
+    z-index: 3;
     position: absolute;
+}
+
+@media  screen and (max-width: 1499px){
+    .margen-idea{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .finalizado9{
+        width: 280px;
+        height: 180px;
+    }
 }
 
 @media screen and (max-width: 768px){
@@ -119,6 +134,9 @@
     .imagen-centrada{
         width: 100%;
         /*margin: auto;*/
+    }
+    .movimiento9{
+        top: 13%;
     }
 }
 
@@ -134,16 +152,18 @@
         width: 100%;
         /*margin: auto;*/
     }
+
+    .movimiento9{
+        top: 1%;
+    }
+    .finalizado9{
+        width: 140px;
+        height: 70px;
+    }
 }
 
 .margen-idea{
     margin-left: auto;
     margin-right: auto;
-}
-@media  screen and (max-width: 1499px){
-    .margen-idea{
-        margin-left: 20px;
-        margin-right: 20px;
-    }
 }
 
