--- a/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
@@ -7,6 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <meta charset="UTF-8"/>
+    <meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
     <title>Template alumno</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <h:outputStylesheet library="css" name="uikit.css"/>
