estilos a los puntos

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -188,6 +188,6 @@ textarea {
     .boton-gral2{
         position: relative;
         bottom: -190px;
-        margin: auto;
+        left: -9%;
     }
 }
