--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
@@ -147,7 +147,10 @@
     .titulo-14 h3{
         font-size: 10px;
         font-weight: bold;
-        width: 220px;
+        width: 150px;
+        top: 2%;
+        left: 8%;
+        position: relative;
     }
 
     .titulo-14{
