--- a/tecolotl-web/src/main/webapp/resources/css/navegacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/navegacion.css
@@ -129,6 +129,7 @@ uk-subnav-alumno2 li.uk-active:nth-child(6) a {
     font-weight: bold;
     font-family: 'Sniglet', sans-serif;
     letter-spacing: 2px;
+    margin-top: 20%;
     padding: 10px 20px;
     font-size: 17px;
     background-color: #CB4335;
@@ -142,6 +143,7 @@ uk-subnav-alumno2 li.uk-active:nth-child(6) a {
 
 .tam-form{
     width: 180px;
+    height: 133px;
     margin: auto;
 }
 .uk-modal-dialog.pop-art-modal{
