--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-experimento.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-experimento.css
@@ -110,10 +110,36 @@ body{
     position: absolute;
 }
 
-@media screen and(max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .titulo-mapa-7{
         font-size: 19px;
         top: -10%;
         left: 2%;
+    }
+    .finalizado7{
+        width: 200px;
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .finalizado7{
+        width: 200px;
+        height: 100px;
+    }
+    .movimiento7{
+        top: 10%;
+        left: 10%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .finalizado7{
+        width: 100px;
+        height: 50px;
+    }
+    .movimiento7{
+        top: 7%;
+        left: 7%;
     }
 }
