media quierie para safari

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
@@ -75,6 +75,13 @@
     z-index: 3;
     position: absolute;
 }
+/*safari*/
+@media screen and (max-width: 1440px) {
+    .titulo-10{
+        position: absolute;
+        top: 80px;
+    }
+}
 
 @media screen and (max-width: 1024px){
  .caja-texto-10{
