--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -1,4 +1,34 @@
-.vacio g {
-    fill: white;
-    stroke: white;
+.vacio{
+    background-image: url("#{resource['img/alumno/pop-art/mensaje5.svg']}");
+    background-position: center center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 30%;
+    height: 400px;
+    margin: auto;
+    font-size: 50px;
+    color: #76448A;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .vacio{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .vacio{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .vacio{
+        width: 80%;
+        font-size: 40px;
+    }
 }
