--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -7,3 +7,45 @@
 .seleccionado {
     background-color: #2AABE2;
 }
+
+progress{
+    width: 120px;
+    height: 18px;
+    background-color: white;
+    /*border-radius: 5px;*/
+    border: 1px solid black;
+}
+progress:indeterminate{
+    color: transparent;
+}
+
+progress::-webkit-progress-bar {
+    background-color: #f8f8f8;
+    /*border-radius: 5px;*/
+    overflow: hidden;
+}
+
+/* 2 */
+progress:indeterminate::-moz-progress-bar {
+    width: 0;
+}
+
+/*
+ * Progress bar
+ * 1. Remove right border in IE11 and Edge
+ */
+progress::-webkit-progress-value {
+    background-color: #1e87f0;
+    transition: width 0.6s ease;
+}
+
+progress::-moz-progress-bar {
+    background-color: #1e87f0;
+}
+
+progress::-ms-fill {
+    background-color: #1e87f0;
+    transition: width 0.6s ease;
+    /* 1 */
+    border: 0;
+}
