Se Corregio etiqueta.properties

--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <div class="left-content-box uk-margin-top">
-        <h5 class="uk-text-uppercase">#{etiqueta['for.all.administrator.views.status']}</h5>
+        <h5 class="uk-text-uppercase">#{etiqueta['status']}</h5>
         <div>
             <span class="uk-text-small primera-mayuscula uk-display-block">#{administracion['menu.schools']} <small>(#{estatusControlador.escuelas})</small></span>
             <progress class="uk-progress" value="100" max="100"/>
