--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -104,28 +104,21 @@
 }
 
 
-.color-uno{
-    background-color: #00a49d;
-}
-.color-dos{
-    background-color: #E8380C;
-}
-.color-tres{
-    background-color: #F1C40F;
-}
-.color-cuatro{
-    background-color: #CA445D;
-}
+
 .fondo-more{
-    background: url("#{resource['img/alumno/fondo-6s.png']}") no-repeat center center/100% 100%;
+    /*background: url("#{resource['img/alumno/cuadro-fondo.svg']}") no-repeat center center/100% 100%;*/
+    background-color: white;
+    border: 5px solid #038f72;
+    border-radius: 20px;
     height: 600px;
+    padding: 10px;
 
 }
 
 [class^="more-"]{
     width: 50%;
     height: 50%;
-    position: absolute;
+    float: left;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -147,38 +140,62 @@
 }
 
 .more-uno{
+    border: 3px dashed black;
+    border-radius: 20px;
     box-sizing: border-box;
-    color: black;
+    color: #038f72;
     top: 0;
     left: 0;
     padding-left: 3%;
     padding-right: 3%;
+    /*!*margin-top: 10px;*!*/
+    /*!*margin-left: 10px;*!*/
+    /*width: 585px;*/
+    /*height: 285px;*/
 }
 
 .more-dos{
-    color: black;
+    border: 3px dashed black;
+    border-radius: 20px;
+    color: #038f72;
     top: 0;
     right: 0;
     box-sizing: border-box;
-    padding-left: 5%;
+    padding-left: 3%;
     padding-right: 3%;
+    /*!*margin-top: 10px;*!*/
+    /*!*margin-right: 10px;*!*/
+    /*width: 585px;*/
+    /*height: 285px;*/
 }
 .more-tres{
+    border: 3px dashed black;
+    border-radius: 20px;
+    color: #038f72;
     box-sizing: border-box;
     bottom: 0;
     left: 0;
     padding-left: 3%;
-    padding-right: 12%;
-
+    padding-right: 3%;
+    /*margin-left: 10px;*/
+    /*margin-bottom: 10px;*/
+    /*width: 585px;*/
+    /*height: 285px;*/
 }
 
 .more-cuatro{
-    color: black;
+    border: 3px dashed black;
+    border-radius: 20px;
+    color: #038f72;
     bottom: 0;
     right: 0;
     box-sizing: border-box;
-    padding-left: 5%;
+    padding-left: 3%;
     padding-right: 3%;
+    /*margin-right: 10px;*/
+    /*margin-bottom: 10px;*/
+    /*width: 585px;*/
+    /*height: 285px;*/
 }
 
 .respuesta-oracion{
@@ -236,7 +253,8 @@
 
 }
 [class^="caja-"]{
-    border: 6px solid white;
+    border: 6px solid #038f72;
+    background-color: white;
     margin-bottom: 10px;
     height: 150px;
     display: flex;
@@ -246,19 +264,7 @@
     color: black;
     font-weight: bold;
     font-family: 'Sniglet', sans-serif;
-}
-
-.caja-uno-more{
-    background-color: #14ABDE;
-}
-.caja-dos-more{
-    background-color: #2AB149;
-}
-.caja-tres-more{
-    background-color: #FEC309;
-}
-.caja-cuatro-more{
-    background-color: #ED1285;
+    position: relative;
 }
 
 .imagen-oracion{
@@ -365,4 +371,36 @@
     top: 34%;
     right: 5%;
     transform: rotate(15deg);
+}
+
+.mosca{
+    background-image: url("#{resource['img/alumno/fondo-mosca.svg']}");
+    background-position: center center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 31%;
+    height: 250px;
+    margin: auto;
+    position: relative;
+    top: 38px;
+}
+
+h1 + div > div > p{
+    position: absolute;
+    color: #038f72;
+    font-weight: bold;
+    font-size: 17px;
+    left: 16%;
+    top: 10%;
+}
+
+@media screen and (max-width: 450px){
+    .mosca{
+        width: 80%;
+        top: 62px;
+    }
+    h1 + div > div > p{
+        font-size: 12px;
+        top: 18%;
+    }
 }
