--- a/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
@@ -5,7 +5,7 @@
 .avance{
     /*background-color: #00a49d;*/
     display: flex;
-    align-items: center;
+    align-content: center;
     flex-wrap: wrap;
 }
 
@@ -17,7 +17,7 @@
 }
 .rango{
     display: block;
-    width: 80%;
+    width: 100%;
     -webkit-appearance: none;
     appearance: none;
     height: 13px;
@@ -50,6 +50,7 @@
     cursor: pointer;
 }
 .mapa-mental > div{
+    padding-bottom: 10px;
     border-bottom: 8px solid #0e6dcd;
 }
 
@@ -63,12 +64,17 @@
     color: red;
 }
 .mapa-mental textarea{
-    height: 90px;
+    height: 70px;
 }
 
 .mapa-mental form  > .comentario textarea{
     height: 75%;
     box-sizing: border-box;
+}
+.mapa-mental form label{
+    padding-left: 5px;
+    font-style: italic;
+    font-weight: bold;
 }
 
 .bmap-1{
@@ -115,4 +121,19 @@
 }
 .bmap-15{
     background: url("#{resource['img/alumno/mapa-mental/preview/15.jpg']}") no-repeat center center/100% 100%;
+}
+
+.mapa-mental form [class^="uk-width-1-3"]{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    font-size: 17px;
+    font-weight: bolder;
+    font-style: italic;
+    color: black;
+}
+
+.mapa-mental form .boton-escuadron-base{
+    position: relative;
+    left: calc(60% - (108.91px/2));
 }
