--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -376,7 +376,6 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
 
 .tablaPrimaria{
   width: 100%;
-  font-family: inherit;
   color: #000 !important;
   background-color: #FFF5EE;
   border-radius: 8px;
@@ -385,10 +384,9 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
   /*overflow: hidden;*/
   font-size: 13px;
   font-weight: bold;
-  text-transform: uppercase;
 }
 .tablaPrimaria, .thPrimario, .tdPrimario{
-  text-align: center !important;
+  /*text-align: center !important;*/
   border-bottom: 2px solid #000;
 }
 .borde-top-amarillo{
@@ -398,7 +396,9 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
 }
 .tablaPrimaria .thPrimario{
   /*background-color: #F5F5F5;*/
-    background-color: #ceccc2;
+  background-color: #ceccc2;
+  color: black;
+  font-weight: bold;
 }
 .uk-table-small th,
 .uk-table-small td {
