se da estilos a tarea alumnos

--- a/tecolotl-web/src/main/webapp/resources/css/graficas.css
+++ b/tecolotl-web/src/main/webapp/resources/css/graficas.css
@@ -11,3 +11,20 @@
     height: 235px;
     margin: 0 auto;
 }
+
+.uk-container > ul + div > div > span{
+    font-weight: bold;
+    color: black;
+}
+
+.uk-container > ul + div > div{
+    padding-left: 15px;
+    padding-top: 15px;
+}
+
+.uk-container > ul + div{
+    width: 350px;
+    height: 100px;
+    border: 3px solid var(--tsecundary-option-one);
+    border-radius: 15px;
+}
