--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -470,6 +470,8 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
 .nino{
   width: 40px;
   height: 72px;
+  margin-top: 15px;
+  margin-left: 7px;
 }
 
 .contenedor-imagen-alumnos>div{
