--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -257,7 +257,7 @@
   border: 2px solid;
   position: relative;
   transition: box-shadow 0.15s ease-out;
-  border-radius: 5%;
+  border-radius: 8px;
 }
 
 .color-card-one{
@@ -470,8 +470,6 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
 .nino{
   width: 40px;
   height: 72px;
-  margin-top: 15px;
-  margin-left: 7px;
 }
 
 .contenedor-imagen-alumnos>div{
