estilos css a administracion alumnos

--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -55,7 +55,7 @@ progress::-ms-fill {
     border: 0;
 }
 
-div > div > div + div + button{
+div > button{
     position: relative;
     left: 85%;
 }
