--- a/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
@@ -14,6 +14,9 @@
     height: 250px;
     /*border: 3px solid #444444;*/
     box-shadow: 0 8px 5px #999999 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .rango{
     display: block;
@@ -92,7 +95,17 @@
 .mapa-mental input[type=range] + div > span:first-child{
     margin-right: 100px;
 }
-
+.respondido{
+    background: url("#{resource['img/alumno/pop-art/popart-amarillo.svg']}") no-repeat center center/100% 100%;
+    width: 70%;
+    height: 95px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.respondido span{
+    font-weight: bold;
+}
 
 .bmap-1{
     background: url("#{resource['img/alumno/mapa-mental/preview/1.jpg']}") no-repeat center center/100% 100%;
