--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -162,7 +162,7 @@
   color:white;
     border-top-left-radius:  3px;
     border-top-right-radius: 3px;
-    background-color:var(--tsecundary-option-one);
+    background-color:var(--turquesa-primary-color);
     padding: 4px 4px;
 
 }
@@ -389,9 +389,9 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
   /*text-align: center !important;*/
   border-bottom: 2px solid #000;
 }
-.borde-top-amarillo{
+.borde-top-azul{
   /*text-align: center;*/
-  border-top : 4px solid var(--tsecundary-option-one);
+  border-top : 4px solid var(--color-nav-primary);
   border-bottom: 2px solid #000;
 }
 .tablaPrimaria .thPrimario{
@@ -530,4 +530,10 @@ padding-top: 38px;
 .img-previa{
   width: 100px;
   height: 50px;
+}
+
+.border-button{
+  background-color: transparent;
+  color: #333;
+  border: 1.5px solid #00a49d;
 }
