--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -74,3 +74,7 @@ div > div > div > div + div + div + div + div + div > img:hover{
 .selector{
     height: 40px;
 }
+
+.padding-titulo{
+    padding-left: 10px;
+}
