--- a/tecolotl-web/src/main/webapp/resources/css/navegacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/navegacion.css
@@ -85,9 +85,9 @@
     background-color:var(--turquesa-primary-color);
 
 }.uk-subnav-alumno2 li.uk-active:nth-child(2) a {
-     background-color:var(--activo-fondo-navbar);
+     background-color:var(--turquesa-primary-color);
  }.uk-subnav-alumno2 li.uk-active:nth-child(3) a {
-      background-color:var(--activo-fondo-navbar);
+      background-color:var(--turquesa-primary-color);
   }
 .uk-subnav-alumno2 li.uk-active:nth-child(4) a {
     background-color:var(--activo-fondo-navbar);
